<?xml version='1.0' encoding='UTF-8'?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.soffid.tools</groupId>
	<artifactId>mdagenerator</artifactId>
	<name>Soffid MDA Generator</name>
	<version>2.3.2-SNAPSHOT</version>
	<parent>
		<groupId>com.soffid</groupId>
		<artifactId>template</artifactId>
		<version>1.0.0</version>
	</parent>
	<prerequisites>
		<maven>2.0.9</maven>
	</prerequisites>
	<scm>
		<connection>scm:git:ssh://git@github.com/SoffidIAM/tools.git</connection>
		<tag>HEAD</tag>
	</scm>


	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-plugin-plugin</artifactId>
				<version>3.7.1</version>
				<configuration>
					<skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
					<mojoDependencies>
						<mojoDepnedency />
					</mojoDependencies>
				</configuration>
				<executions>
					<!-- if you want to generate help goal -->
					<execution>
						<id>help-goal</id>
						<goals>
							<goal>helpmojo</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>11</source>
					<target>11</target>
					<compilerArgs>
						<arg>--add-modules=java.sql</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.0.4</version>
			</plugin>

			<!-- Testing the result of the it pom.xml -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>**/*IntegrationTest.java</exclude>
					</excludes>
					<argLine>
						--add-modules java.sql
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5.3</version>
				<configuration>
					<preparationGoals>clean install integration-test</preparationGoals>
					<goals>clean install deploy</goals>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<pluginRepositories>
		<pluginRepository>
			<id>soffid-open</id>
			<url>https://download.soffid.com/maven</url>
		</pluginRepository>
	</pluginRepositories>
	<repositories>
		<repository>
			<id>central</id>
			<url>https://repo1.maven.org/maven2</url>
		</repository>
		<repository>
			<id>soffid-open</id>
			<url>https://download.soffid.com/maven</url>
		</repository>
	</repositories>
	<distributionManagement>
		<repository>
			<uniqueVersion>true</uniqueVersion>
			<id>soffid-open</id>
			<name>Soffid Maven repository</name>
			<url>${soffid.deploy.url}</url>
		</repository>
		<site>
			<id>soffid-open-site</id>
			<name>Soffid Maven site repository</name>
			<url>${soffid.deploy.site.url}</url>
		</site>
	</distributionManagement>

	<dependencies>
		<dependency>
			<groupId>com.thoughtworks.paranamer</groupId>
			<artifactId>paranamer</artifactId>
			<version>2.6</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring</artifactId>
			<version>1.2.7</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>3.8.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>net.sourceforge.plantuml</groupId>
			<artifactId>plantuml</artifactId>
			<version>7995</version>
		</dependency>
	</dependencies>

</project>
